<?xml version="1.0"?>
<package format="3">
  <name>web_control</name>
  <version>0.1.0</version>
  <description>TurboPi Web UI (Home + Run) with gaming style and status panel</description>
  <maintainer email="basel@example.com">basel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
